syntax = "proto3";

package org_glowroot_common2_repo_proto;

option java_package = "org.glowroot.common2.repo.proto";

message NetworkGraph {

  double total_duration_nanos = 1;
  int64 execution_count = 2;
  repeated UpstreamNode upstream_node = 3;
  repeated DownstreamNode downstream_node = 4;
  repeated ExternalNode external_node = 4;

  message UpstreamNode {
    bool eum = 1;
    string node_id = 2; // eum: hostname or similar (optional), non-eum: agent_id
    string transaction_type = 3; // eum: e.g. Browser
    string transaction_name = 4;
    int64 execution_count = 5;
    repeated UpstreamNode upstream_node = 6;
  }

  message DownstreamNode {
    string agent_id = 1;
    string transaction_type = 2;
    string transaction_name = 3;
    double total_duration_nanos = 4;
    int64 execution_count = 5;
    repeated DownstreamNode downstream_node = 6;
  }

  message ExternalNode {
    string dest = 1;
    double total_duration_nanos = 2;
    int64 execution_count = 3;
  }
}
